--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Doctors#index</h1>
-<p>Find me in app/views/doctors/index.html.erb</p>
+<p style="color: green"><%= notice %></p>
+
+<h1>Doctors</h1>
+
+<% flash.each do |type, msg| %>
+  <div>
+    <%= msg %>
+  </div>
+<% end %>
+
+<div id="doctors">
+<table>
+  <thead>
+    <tr>
+      <th>NPI</th>
+      <th>First name</th>
+      <th>Last name</th>
+      <th colspan="3">Action</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @doctors.each do |doctor| %>
+      <tr>
+        <td><%= doctor.npi %></td>
+        <td><%= doctor.person.first_name %></td>
+        <td><%= doctor.person.last_name %></td>
+        <td>
+            <%= link_to 'Show', doctor %>
+            <%= link_to 'Edit', edit_doctor_path(doctor) %>
+            <%= button_to "Destroy", @doctor, method: :delete, data: {confirm: "Are you sure?"} %>
+        </td>
+       
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+</div>
+<%= link_to "New doctor", new_doctor_path %>
