--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Doctors#new</h1>
-<p>Find me in app/views/doctors/new.html.erb</p>
+<h1>New doctor</h1>
+
+<%= render "form", doctor: @doctor %>
+
+<br>
+
+<div>
+  <%= link_to "Back to doctors", doctors_path %>
+</div>
