--- a/app/views/doctors/edit.html.erb
+++ b/app/views/doctors/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Doctors#edit</h1>
-<p>Find me in app/views/doctors/edit.html.erb</p>
+<h1>Editing doctor</h1>
+
+<%= render "form", doctor: @doctor %>
+
+<br>
+
+<div>
+  <%= link_to "Show this doctor", @doctor %> |
+  <%= link_to "Back to doctors", doctors_path %>
+</div>
