some modification on button delete html

--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -28,7 +28,7 @@
         <td>
             <%= link_to 'Show', doctor %>
             <%= link_to 'Edit', edit_doctor_path(doctor) %>
-            <%= button_to 'Remove', doctor_path(doctor), method: 'delete', data: { confirm: 'Are you sure?' } %>
+            <%= button_to 'Remove', doctor_path(doctor), method: 'delete' %>
         </td>
        
     </tr>
