--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -3,7 +3,7 @@
 <h1>Doctors</h1>
 
 <% flash.each do |type, msg| %>
-  <div>
+  <div style="color: green">
     <%= msg %>
   </div>
 <% end %>
@@ -13,8 +13,9 @@
   <thead>
     <tr>
       <th>NPI</th>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>FIRST NAME name</th>
+      <th>LAST NAMES</th>
+      <th>STATUS</th>
       <th colspan="3">Action</th>
     </tr>
   </thead>
@@ -25,6 +26,7 @@
         <td><%= doctor.npi %></td>
         <td><%= doctor.person.first_name %></td>
         <td><%= doctor.person.last_name %></td>
+        <td><%= doctor.status %></td>
         <td>
             <%= link_to 'Show', doctor %>
             <%= link_to 'Edit', edit_doctor_path(doctor) %>
