--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -3,39 +3,36 @@
 <h1>Doctors</h1>
 
 <% flash.each do |type, msg| %>
-  <div style="color: green">
-    <%= msg %>
-  </div>
+  <div style="color: green"><%= msg %></div>
 <% end %>
 
 <div id="doctors">
-<table>
-  <thead>
-    <tr>
-      <th>NPI</th>
-      <th>FIRST NAME name</th>
-      <th>LAST NAMES</th>
-      <th>STATUS</th>
-      <th colspan="3">Action</th>
-    </tr>
-  </thead>
+  <table>
+    <thead>
+      <tr>
+        <th>NPI</th>
+        <th>FIRST NAME name</th>
+        <th>LAST NAMES</th>
+        <th>STATUS</th>
+        <th colspan="3">Action</th>
+      </tr>
+    </thead>
 
-  <tbody>
-    <% @doctors.each do |doctor| %>
+    <tbody>
+      <% @doctors.each do |doctor| %>
       <tr>
         <td><%= doctor.npi %></td>
         <td><%= doctor.person.first_name %></td>
         <td><%= doctor.person.last_name %></td>
         <td><%= doctor.status %></td>
         <td>
-            <%= link_to 'Show', doctor %>
-            <%= link_to 'Edit', edit_doctor_path(doctor) %>
-            <%= button_to 'Remove', doctor_path(doctor), method: 'delete' %>
+          <%= link_to 'Show', doctor %>
+          <%= link_to 'Edit', edit_doctor_path(doctor) %>
+          <%= button_to 'Remove', doctor_path(doctor), method: 'delete' %>
         </td>
-       
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
 <%= link_to "New doctor", new_doctor_path %>
