--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <% flash.each do |type, msg| %>
+      <div <% if type == "notice" %>style="color: green" <% else %> style="color: red" <% end %> > 
+        <%= msg %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
