--- a/app/views/doctors/edit.html.erb
+++ b/app/views/doctors/edit.html.erb
@@ -1,7 +1,15 @@
-<h1>Editing doctor</h1>
-<%= render "form", doctor: @doctor %>
-<br>
-<div>
-  <%= link_to "Show this doctor", @doctor %> |
-  <%= link_to "Back to doctors", doctors_path %>
+<div class="col-md-8 offset-md-2">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Editing doctor</h1>
+    </div>
+    <div class="col-md-6">
+      <%= link_to "Back to doctors", doctors_path, class: 'btn btn-primary float-end m-1'  %>
+      <%= link_to "Show this doctor", @doctor , class: 'btn btn-success float-end m-1'  %> 
+    </div>
+  </div>
+  <br>
+  <div class="row" >
+    <%= render "form", doctor: @doctor %>
+  </div>
 </div>
