--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,14 +1,14 @@
 <h1>Doctors</h1>
 
 <div id="doctors">
-  <table>
+  <table class="table table-striped">
     <thead>
       <tr>
         <th>NPI</th>
-        <th>FIRST NAME name</th>
-        <th>LAST NAMES</th>
+        <th>FIRST NAME</th>
+        <th>LAST NAME</th>
         <th>STATUS</th>
-        <th colspan="3">Action</th>
+        <th >SHOW</th>
       </tr>
     </thead>
     <tbody>
@@ -19,13 +19,11 @@
         <td><%= doctor.person.last_name %></td>
         <td><%= doctor.status %></td>
         <td>
-          <%= link_to 'Show', doctor %>
-          <%= link_to 'Edit', edit_doctor_path(doctor) %>
-          <%= button_to 'Remove', doctor_path(doctor), method: 'delete' %>
+          <%= link_to 'Show', doctor, class: 'dropdown-item', class: 'btn btn-primary' %>
         </td>
       </tr>
       <% end %>
     </tbody>
   </table>
 </div>
-<%= link_to "New doctor", new_doctor_path %>
+<%= link_to "New doctor", new_doctor_path, class: 'btn btn-primary' %>
