--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,13 +1,23 @@
-<h1>Doctor <%= @doctor.person.full_name %></h1>
-<label for="">NPI</label>
-<h4><%= @doctor.npi %></h4>
-  <%= link_to "Edit this doctor", edit_doctor_path(@doctor) %> |
-  <%= link_to "Back to doctors", doctors_path %>
-<% if @doctor.status_leave? %>
-  <p style="color: red" >This doctor left.</p>
-<% end %>
-<% if @doctor.status_retire? %>
-  <p style="color: red" > This doctor is retired. </p>
-<% end %>
 
+<div class="row">
+  <div class="col-md-6">
+  <h1>Doctor <%= @doctor.person.full_name %></h1>
+    <label for="">NPI</label>
+    <h4><%= @doctor.npi %></h4>
+  </div>
+  <div class="col-md-6">
+    <%= button_to 'Remove', doctor_path(@doctor), method: 'delete', class: 'dropdown-item', class: 'btn btn-danger float-end m-1' %>
+    <%= link_to "Edit this doctor", edit_doctor_path(@doctor), class: 'btn btn-success float-end m-1' %> 
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <% if @doctor.status_leaved? %>
+      <p style="color: red;text-align:center" >This doctor left.</p>
+    <% end %>
+    <% if @doctor.status_retired? %>
+      <p style="color: red;text-align:center" > This doctor is retired. </p>
+    <% end %>
+  </div>
+</div>
 
