--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,27 +1,30 @@
 <%= form_with(model: person) do |form| %>
-  <% if person.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(person.errors.count, "error") %> prohibited this person from being saved:</h2>
+  <div class="alert alert-danger" role="alert">
+    <% if person.errors.any? %>
+      <div style="color: red">
+        <h3></h3><%= pluralize(person.errors.count, "error") %> prohibited this person from being saved:</h3>
+          <ul>
+            <% person.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+      </div>
+    <% end %>
+  </div>
 
-      <ul>
-        <% person.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  
 
-  <div>
+  <div class='form-group'>
     <%= form.label :first_name, style: "display: block" %>
-    <%= form.text_field :first_name %>
+    <%= form.text_field :first_name, class: 'form-control'  %>
   </div>
 
-  <div>
+  <div class='form-group'>
     <%= form.label :last_name, style: "display: block" %>
-    <%= form.text_field :last_name %>
+    <%= form.text_field :last_name, class: 'form-control' %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-success mt-3' %>
   </div>
 <% end %>
