--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,10 +1,15 @@
-<h1>Editing person</h1>
-
-<%= render "form", person: @person %>
-
-<br>
-
-<div>
-  <%= link_to "Show this person", @person %> |
-  <%= link_to "Back to people", people_path %>
+<div class="col-md-8 offset-md-2">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Editing person</h1>
+    </div>
+    <div class="col-md-6">
+      <%= link_to "Back to people", people_path, class: 'btn btn-primary float-end m-1'  %>
+      <%= link_to "Show this person", @person , class: 'btn btn-success float-end m-1'  %> 
+    </div>
+  </div>
+  <br>
+  <div class="row" >
+    <%= render "form", person: @person %>
+  </div>
 </div>
