--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,8 +1,15 @@
-<%= render @person %>
-
-<div>
-  <%= link_to "Edit this person", edit_person_path(@person) %> |
-  <%= link_to "Back to people", people_path %>
-
-  <%= button_to "Destroy this person", @person, method: :delete %>
+<div class="row">
+  <div class="col-md-6">
+    <h1>Person Detail</h1>
+    <label for="">First name</label>
+    <h4><%= @person.first_name %></h4>
+    <label for="">Last name</label>
+    <h4><%= @person.last_name %></h4>
+  </div>
+  <div class="col-md-6">
+    <%= button_to 'Remove', person_path(@person), method: 'delete', class: 'dropdown-item', class: 'btn btn-danger float-end m-1' %>
+    <%= link_to "Edit this person", edit_person_path(@person), class: 'btn btn-success float-end m-1' %> 
+  </div>
 </div>
+
+
