--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -26,7 +26,7 @@
   <% if doctor.persisted?  %>
     <div class="form-group">
       <%= form.label :status %>
-      <%= form.select :status, options_for_select(Doctor.statuses.keys ), {}, { class: "form-control"}  %>
+      <%= form.select :status, options_for_select(Doctor.statuses.keys, @doctor.status ), {}, { class: "form-control"}  %>
     </div>
   <% end %>
   
