add link patients to navbar / fix spaces on patient migration

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -13,7 +13,7 @@
           <%= link_to 'Doctors', doctors_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Patients', '#', class: 'nav-link' %>
+          <%= link_to 'Patients', patients_path, class: 'nav-link' %>
         </li>
       </ul>
     </div>
