--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,10 +1,15 @@
-<h1>Editing patient</h1>
-
-<%= render "form", patient: @patient %>
-
-<br>
-
-<div>
-  <%= link_to "Show this patient", @patient %> |
-  <%= link_to "Back to patients", patients_path %>
+<div class="col-md-8 offset-md-2">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Editing patient</h1>
+    </div>
+    <div class="col-md-6">
+      <%= link_to "Back to patients", patients_path, class: 'btn btn-primary float-end m-1'  %>
+      <%= link_to "Show this patient", @patient , class: 'btn btn-success float-end m-1'  %> 
+    </div>
+  </div>
+  <br>
+  <div class="row" >
+    <%= render "form", patient: @patient %>
+  </div>
 </div>
