--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,14 +1,31 @@
-<p style="color: green"><%= notice %></p>
-
 <h1>Patients</h1>
 
 <div id="patients">
-  <% @patients.each do |patient| %>
-    <%= render patient %>
-    <p>
-      <%= link_to "Show this patient", patient %>
-    </p>
-  <% end %>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>UPI</th>
+        <th>FIRST NAME</th>
+        <th>LAST NAME</th>
+        <th>PRIMARY CARE</th>
+        <th >SHOW</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @patients.each do |patient| %>
+      <tr>
+        <td><%= patient.id %></td>
+        <td><%= patient.upi %></td>
+        <td><%= patient.person.first_name %></td>
+        <td><%= patient.person.last_name %></td>
+        <td><%= patient.doctor.person.full_name %></td>
+        <td>
+          <%= link_to 'Show', patient, class: 'dropdown-item', class: 'btn btn-primary' %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
-
-<%= link_to "New patient", new_patient_path %>
+<%= link_to "New patient", new_patient_path, class: 'btn btn-primary' %>
