--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,10 +1,14 @@
-<p style="color: green"><%= notice %></p>
-
-<%= render @patient %>
-
-<div>
-  <%= link_to "Edit this patient", edit_patient_path(@patient) %> |
-  <%= link_to "Back to patients", patients_path %>
-
-  <%= button_to "Destroy this patient", @patient, method: :delete %>
+<div class="row">
+  <div class="col-md-6">
+  <h1>Patient <%= @patient.person.full_name %></h1>
+    <label for="">upi</label>
+    <h4><%= @patient.upi %></h4>
+    <hr>
+    <label for="">Priamry care</label>
+    <h4><%= @patient.doctor.person.full_name %></h4>
+  </div>
+  <div class="col-md-6">
+    <%= button_to 'Remove', patient_path(@patient), method: 'delete', class: 'dropdown-item', class: 'btn btn-danger float-end m-1' %>
+    <%= link_to "Edit this patient", edit_patient_path(@patient), class: 'btn btn-success float-end m-1' %> 
+  </div>
 </div>
