--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -11,7 +11,7 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-    <% if @doctor.status_leaved? %>
+    <% if @doctor.status_on_leave? %>
       <p style="color: red;text-align:center" >This doctor left.</p>
     <% end %>
     <% if @doctor.status_retired? %>
