add function set_unassigned_people_and_status on DoctorController

--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -21,12 +21,12 @@
   <% if doctor.persisted?  %>
     <div class="form-group">
       <%= form.label :status %>
-      <%= form.select :status, options_for_select(Doctor.statuses.keys, @doctor.status ), {}, { class: "form-control"}  %>
+      <%= form.select :status, options_for_select(@statuses.collect { |value, key| [key, value] }, @doctor.status ), {}, { class: "form-control"}  %>
     </div>
   <% else %>
     <div class="form-group">
       <%= form.label :person_id %>
-      <%= form.collection_select :person_id, Person.order(:id), :id, :full_name , { include_blank: '-- select person -- '}, { class: 'form-control'} %>
+      <%= form.collection_select :person_id, @people, :id, :full_name , { include_blank: '-- select person -- '}, { class: 'form-control'} %>
     </div>
   <% end %>
   <div>
