--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag "application" %>
     <%= javascript_tag %>
+    <%= javascript_importmap_tags %>
   </head>
   <body>
     <div class="container">
