--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -11,7 +11,7 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-    <% if @doctor.status_no_active? %>
+    <% if @doctor.status_inactive? %>
       <p style="color: red;text-align:center" >this doctor is not active.</p>
     <% end %>
   </div>
