--- a/app/views/doctors/edit.html.erb
+++ b/app/views/doctors/edit.html.erb
@@ -10,6 +10,6 @@
   </div>
   <br>
   <div class="row" >
-    <%= render "form", doctor: @doctor %>
+    <%= render "form", doctor: @doctor, statuses: @statuses  %>
   </div>
 </div>
