change msg inactive doctor on show page

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -12,7 +12,7 @@
 <div class="row">
   <div class="col-md-12">
     <% if @doctor.status_inactive? %>
-      <p style="color: red;text-align:center" >this doctor is not active.</p>
+      <p style="color: red;text-align:center" >this doctor is inactive.</p>
     <% end %>
   </div>
 </div>
