--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -22,7 +22,7 @@
     <%= form.label :person_id %>
     <%= form.collection_select :person_id,
         @people, :id, :full_name ,
-        { :selected => @doctor.person_id},
+        { :selected => doctor.person_id},
         { class: 'form-control'} %>
   </div>
   <% if doctor.persisted? == true %>
