Comparing a boolean to true is not necessary

--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -25,7 +25,7 @@
         { :selected => doctor.person_id},
         { class: 'form-control'} %>
   </div>
-  <% if doctor.persisted? == true %>
+  <% if doctor.persisted? %>
     <div class="form-group">
       <%= form.label :status %>
       <%= form.select :status, options_for_select(statuses, doctor.status ), {}, { class: "form-control"}  %>
