--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -2,7 +2,7 @@
   <% if person.errors.any? %>
     <div class="alert alert-danger" role="alert">
       <div style="color: red">
-        <h3></h3><%= pluralize(person.errors.count, "error") %> prohibited this person from being saved:</h3>
+        <h3><%= pluralize(person.errors.count, "error") %> prohibited this person from being saved:</h3>
           <ul>
             <% person.errors.each do |error| %>
               <li><%= error.full_message %></li>
