--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-6">
-  <h1>Doctor <%= @doctor.person.full_name %></h1>
-    <label for="">NPI</label>
-    <h4><%= @doctor.npi %></h4>
+    <h1>Doctor <%= @doctor.person.full_name %></h1>
+    <hr>
+    <h4 >NPI: <span class="fw-lighter"> <%= @doctor.npi %> </span></h4>
   </div>
   <div class="col-md-6">
     <%= button_to 'Remove', doctor_path(@doctor), method: 'delete', class: 'dropdown-item', class: 'btn btn-danger float-end m-1' %>
