No instance variables allowed in partials

--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -21,7 +21,7 @@
   <div class="form-group">
     <%= form.label :person_id %>
     <%= form.collection_select :person_id,
-        @people, :id, :full_name ,
+        people, :id, :full_name ,
         { :selected => doctor.person_id},
         { class: 'form-control'} %>
   </div>
