--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h1>Doctor <%= @doctor.person.full_name %></h1>
     <hr>
-    <h4 >NPI: <span class="fw-lighter"> <%= @doctor.npi %> </span></h4>
+    <h4>NPI: <span class="fw-lighter"> <%= @doctor.npi %> </span></h4>
   </div>
   <div class="col-md-6">
     <%= button_to 'Remove', doctor_path(@doctor), method: 'delete', class: 'dropdown-item', class: 'btn btn-danger float-end m-1' %>
@@ -12,7 +12,7 @@
 <div class="row">
   <div class="col-md-12">
     <% if @doctor.status_inactive? %>
-      <p style="color: red;text-align:center" >this doctor is inactive.</p>
+      <p class='text-danger text-center'>this doctor is inactive.</p>
     <% end %>
   </div>
 </div>
