--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: doctor) do |form| %>
-  <% if doctor.errors.any? %>
+  <% if doctor.errors.present? %>
     <div class="alert alert-danger" role="alert">
       <div style="color: red">
         <h3><%= pluralize(doctor.errors.count, "error") %> prohibited this doctor from being saved:</h3>
