--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: person) do |form| %>
-  <% if person.errors.any? %>
+  <% if person.errors.present? %>
     <div class="alert alert-danger" role="alert">
       <div style="text-danger">
         <h3><%= pluralize(person.errors.count, "error") %> prohibited this person from being saved:</h3>
