--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -10,6 +10,6 @@
   </div>
   <br>
   <div class="row" >
-    <%= render "form", patient: @patient %>
+    <%= render "form", patient: @patient, doctors: @doctors, people: @people %>
   </div>
 </div>
