--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -16,7 +16,9 @@
           <td><%= doctor.npi %></td>
           <td><%= doctor.person.first_name %></td>
           <td><%= doctor.person.last_name %></td>
-          <td><%= doctor.status.humanize %></td>
+          <td>
+           <%= content_tag(:span, doctor.status.humanize,  :class => ("text-danger" if !doctor.status_active?) ) %>
+          </td>
           <td>
             <%= link_to 'Show', doctor, class: 'dropdown-item', class: 'btn btn-primary' %>
           </td>
