--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -2,7 +2,7 @@
     <% if patient.errors.any? %>
       <div class="alert alert-danger" role="alert">
         <div style="color: red">
-          <h3><%= pluralize(patient.errors.count, "error") %> prohibited this patient from being saved:</h3>
+          <h3><%= pluralize(patient.errors.count, "error") %>prohibited this patient from being saved:</h3>
           <ul>
             <% patient.errors.each do |error| %>
             <li><%= error.full_message %></li>
@@ -14,25 +14,22 @@
         </div>
       </div>
     <% end %>
-  
   <div class="form-group">
     <%= form.label :upi %>
     <%= form.text_field :upi, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= form.label :doctor_id %>
-    <%= form.collection_select :doctor_id, @doctors,
-        :person_id, :full_name_status_str ,
-        { :selected => @patient.doctor_id, 
-          include_blank: '-- select doctor -- ',
-          disabled: @disabled_doctors },
+    <%= form.collection_select :doctor_id, doctors,
+        :person_id, :full_name ,
+        { :selected => patient.doctor_id },
         { class: 'form-control'} %>
   </div>
   <div class="form-group">
     <%= form.label :person_id %>
     <%= form.collection_select :person_id,
-        @people, :id, :full_name ,
-        { :selected => @patient.person_id,  include_blank: '-- select person -- ' },
+        people, :id, :full_name ,
+        { :selected => patient.person_id },
         { class: 'form-control'} %>
   </div>
   <div>
