--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New patient</h1>
 
-<%= render "form", patient: @patient %>
+<%= render "form", patient: @patient, doctors: @doctors, people: @people %>
 
 
