--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -18,9 +18,13 @@
           <td><%= patient.person.first_name %></td>
           <td><%= patient.person.last_name %></td>
           <td>
-            <%= patient&.doctor&.full_name %> 
-            <% if !patient&.doctor&.status_active? %>
-              <small class='text-danger'>(inactive)</small>
+            <% if patient&.doctor.present? %>
+              <%= patient&.doctor&.full_name %>
+              <% if patient&.doctor&.status_inactive? %>
+                <small class='text-danger'>(inactive)</small>
+              <% end %>
+            <% else %>
+              <small class='text-warning'>N/A</small>
             <% end %>
           </td>
           <td>
