--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,14 +1,17 @@
 <div class="row">
   <div class="col-md-6">
-    <h1>Patient <%= @patient.person.full_name %></h1>
-    <h4>UPI: <span class="fw-lighter"><%= @patient.upi %></span></h4>
+    <h1 name='patient_full_name'>Patient <%= @patient.person.full_name %></h1>
+    <h4>UPI: <span class="fw-lighter" name='upi'><%= @patient.upi %></span></h4>
     <hr>
-    <h4>Priamry care: <span class="fw-lighter"><%= @patient&.doctor&.full_name %></span>
-      <% if @patient.doctor.present? && !@patient&.doctor&.status_active? %>
+    <h4>Priamry care:
+    <% if @patient&.doctor.present? %>
+      <span class="fw-lighter" name="doctor_full_name" ><%= @patient.doctor.person.full_name %></span>
+      <% if @patient.doctor.status_inactive? %>
         <span class="text-danger fw-lighter">(this doctor is inactive)</span>
-      <% else %>
-        <span class="text-warning fw-lighter">N/A</span>
       <% end %>
+    <% else %>
+      <span class="text-warning fw-lighter">N/A</span>
+    <% end %>
     </h4>
   </div>
   <div class="col-md-6">
