--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: person) do |form| %>
   <% if person.errors.present? %>
     <div class="alert alert-danger" role="alert">
-      <div style="text-danger">
+      <div class="text-danger">
         <h3><%= pluralize(person.errors.count, "error") %> prohibited this person from being saved:</h3>
         <ul>
           <% person.errors.each do |error| %>
@@ -12,19 +12,15 @@
     </div>
   <% end %>
   <div class='form-group'>
-    <%= form.label :first_name, style: "display: block" %>
+    <%= form.label :first_name %>
     <%= form.text_field :first_name, class: 'form-control'  %>
   </div>
   <div class='form-group'>
-    <%= form.label :last_name, style: "display: block" %>
+    <%= form.label :last_name%>
     <%= form.text_field :last_name, class: 'form-control' %>
-  </div>
-  <div>
-    <%= form.label :last_name, style: "display: block" %>
-    <%= form.text_field :last_name %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-success mt-3' %>
   </div>
 <% end %>
