--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -3,15 +3,16 @@
     <h1 name='patient_full_name'>Patient <%= @patient.person.full_name %></h1>
     <h4>UPI: <span class="fw-lighter" name='upi'><%= @patient.upi %></span></h4>
     <hr>
-    <h4>Priamry care:
-    <% if @patient&.doctor.present? %>
-      <span class="fw-lighter" name="doctor_full_name" ><%= @patient.doctor.person.full_name %></span>
-      <% if @patient.doctor.status_inactive? %>
-        <span class="text-danger fw-lighter">(this doctor is inactive)</span>
+    <h4>
+      Priamry care:
+      <% if @patient&.doctor.present? %>
+        <span class="fw-lighter" name="doctor_full_name" ><%= @patient.doctor.person.full_name %></span>
+        <% if @patient.doctor.status_inactive? %>
+          <span class="text-danger fw-lighter">(this doctor is inactive)</span>
+        <% end %>
+      <% else %>
+        <span class="text-warning fw-lighter">N/A</span>
       <% end %>
-    <% else %>
-      <span class="text-warning fw-lighter">N/A</span>
-    <% end %>
     </h4>
   </div>
   <div class="col-md-6">
