--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -21,7 +21,7 @@
   <div class="form-group">
     <%= form.label :doctor %>
     <select class="form-control" name="patient[doctor_id]" id="patient_doctor_id">
-      <option value="" selected>---------</option>
+      <%= content_tag(:option, '---------', value: '') %>
       <%= doctors.each do |doctor| %>
         <%= content_tag(:option, doctor.person.full_name, value: doctor.person_id, :selected => ("true" if patient.doctor_id) ) %>
       <% end %>
