--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -6,6 +6,7 @@
         <th>ID</th>
         <th>FIRST NAME</th>
         <th>LAST NAME</th>
+        <th>SHOW</th>
       </tr>
     </thead>
     <tbody>
