--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <%= link_to 'Patients', patients_path, class: 'nav-link' %>
         </li>
+        <li class="nav-item">
+          <%= link_to 'Appointments', appointments_path, class: 'nav-link' %>
+        </li>
       </ul>
     </div>
   </div>
