--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <h1>Person Detail</h1>
+    <h1>Person Details:</h1>
     <hr>
     <h4>First name: <span class="fw-lighter"> <%= @person.first_name %> </span></h4>
     <h4>Last name: <span class="fw-lighter"> <%= @person.last_name %> </span></h4>
