--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -4,8 +4,8 @@
       <h1>Editing Appointment</h1>
     </div>
     <div class="col-md-6">
-      <%= link_to "Back to doctors", appointments_path, class: 'btn btn-primary float-end m-1'  %>
-      <%= link_to "Show this doctor", @appointment , class: 'btn btn-success float-end m-1'  %>
+      <%= link_to "Back to appointments", appointments_path, class: 'btn btn-primary float-end m-1'  %>
+      <%= link_to "Show this appointment", @appointment , class: 'btn btn-success float-end m-1'  %>
     </div>
   </div>
   <br>
