--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -16,9 +16,9 @@
   <% end %>
   <div class="form-group">
     <%= form.label :start %>
-    <%= form.datetime_field :start_date, class: 'form-control' %>
+    <%= form.datetime_field :start_date, class: 'form-control', min: Time.now, step: "any" %>
     <%= form.label :end %>
-    <%= form.datetime_field :end_date, class: 'form-control' %>
+    <%= form.datetime_field :end_date, class: 'form-control', min: Time.now, step: "any" %>
   </div>
   <div class="form-group">
     <%= form.label :doctor %>
