--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -34,5 +34,8 @@
       <% end %>
     </tbody>
   </table>
+  <div class="d-flex justify-content-center digg_pagination">
+    <%= will_paginate @posts %>
+  </div>
 </div>
 <%= link_to "New patient", new_patient_path, class: 'btn btn-primary' %>
