--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -22,5 +22,8 @@
       <% end %>
     </tbody>
   </table>
+  <div class="d-flex justify-content-center digg_pagination">
+    <%= will_paginate @posts %>
+  </div>
 </div>
 <%= link_to "New person", new_person_path, class: 'btn btn-primary' %>
