add navbar link item

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -18,6 +18,9 @@
         <li class="nav-item">
           <%= link_to 'Appointments', appointments_path, class: 'nav-link' %>
         </li>
+         <li class="nav-item">
+          <%= link_to 'CSV import', csv_import_index_path, class: 'nav-link' %>
+        </li>
       </ul>
     </div>
   </div>
