update css to scss

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -24,7 +24,7 @@
       <% end %>
     </tbody>
   </table>
-  <div class="d-flex justify-content-center digg_pagination">
+  <div class="d-flex justify-content-center link_pagination">
     <%= will_paginate @posts %>
   </div>
 </div>
