--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,49 +1,72 @@
 @import "bootstrap";
 
-.digg_pagination {
-  background: white;
-  cursor: default;
-  /* self-clearing method: */ }
-  .digg_pagination a, .digg_pagination span, .digg_pagination em {
-    padding: 0.2em 0.5em;
-    display: block;
-    float: left;
-    margin-right: 1px; }
-  .digg_pagination .disabled {
-    color: #999999;
-    border: 1px solid #dddddd; }
-  .digg_pagination .current {
-    font-style: normal;
-    font-weight: bold;
-    background: #2e6ab1;
-    color: white;
-    border: 1px solid #2e6ab1; }
-  .digg_pagination a {
-    text-decoration: none;
-    color: #105cb6;
-    border: 1px solid #9aafe5; }
-    .digg_pagination a:hover, .digg_pagination a:focus {
-      color: #000033;
-      border-color: #000033; }
-  .digg_pagination .page_info {
-    background: #2e6ab1;
-    color: white;
-    padding: 0.4em 0.6em;
-    width: 22em;
-    margin-bottom: 0.3em;
-    text-align: center; }
-    .digg_pagination .page_info b {
-      color: #000033;
-      background: #6aa6ed;
-      padding: 0.1em 0.25em; }
-  .digg_pagination:after {
-    content: ".";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden; }
-  * html .digg_pagination {
-    height: 1%; }
-  *:first-child + html .digg_pagination {
-    overflow: hidden;
+$color_1: #999999;
+$color_2: white;
+$color_3: #105cb6;
+$color_4: #000033;
+$border-color_1: #000033;
+
+.link_pagination {
+	background: white;
+	cursor: default;
+	a {
+		padding: 0.2rem 0.5rem;
+		display: block;
+		float: left;
+		margin-right: 1px;
+		text-decoration: none;
+		color: $color_3;
+		border: 1px solid #9aafe5;
+		&:hover {
+			color: $color_4;
+			border-color: $border-color_1;
+		}
+		&:focus {
+			color: $color_4;
+			border-color: $border-color_1;
+		}
+	}
+	span {
+		padding: 0.2rem 0.5rem;
+		display: block;
+		float: left;
+		margin-right: 1px;
+	}
+	em {
+		padding: 0.2rem 0.5rem;
+		display: block;
+		float: left;
+		margin-right: 1px;
+	}
+	.disabled {
+		color: $color_1;
+		border: 1px solid #dddddd;
+	}
+	.current {
+		font-style: normal;
+		font-weight: bold;
+		background: #2e6ab1;
+		color: $color_2;
+		border: 1px solid #2e6ab1;
+	}
+	.page_info {
+		background: #2e6ab1;
+		color: $color_2;
+		padding: 0.4rem 0.6rem;
+		width: 22rem;
+		margin-bottom: 0.3em;
+		text-align: center;
+		b {
+			color: $color_4;
+			background: #6aa6ed;
+			padding: 0.1rem 0.25rem;
+		}
+	}
+	&:after {
+		content: ".";
+		display: block;
+		height: 0;
+		clear: both;
+		visibility: hidden;
+	}
 }
