--- a/app/views/csv_import/index.html.erb
+++ b/app/views/csv_import/index.html.erb
@@ -41,7 +41,7 @@
           <% end %>
         </tbody>
       </table>
-      <div class="d-flex justify-content-center digg_pagination">
+      <div class="d-flex justify-content-center link_pagination">
         <%= will_paginate @invalid_appointments %>
       </div>
     </div>
