--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -22,7 +22,7 @@
       <% end %>
     </tbody>
   </table>
-  <div class="d-flex justify-content-center digg_pagination">
+  <div class="d-flex justify-content-center link_pagination">
     <%= will_paginate @posts %>
   </div>
 </div>
